Few bug fixes and order

--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -40,6 +40,6 @@
 </ion-content>
 <ion-footer>
   <ion-toolbar>
-    <button ion-button full item-left icon-right (click)="checkOut()">Checkout</button>
+    <button ion-button full item-left icon-right (click)="checkOut()">NEXT</button>
   </ion-toolbar>
 </ion-footer>
