Few bug fixes and order

--- a/src/pages/checkout/checkout.html
+++ b/src/pages/checkout/checkout.html
@@ -40,6 +40,11 @@
       <ion-label floating>Promo code</ion-label>
       <ion-input type="text" name="promo" [(ngModel)]="data.promo"></ion-input>
     </ion-item>
+    <ion-item>
+      <ion-label floating>OTP</ion-label>
+      <ion-input type="text" name="otp" required [(ngModel)]="data.otp" ></ion-input>
+    </ion-item>
+
   </ion-list>
 
 
