--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -19,19 +19,22 @@
 </ion-header>
 <ion-content id="page1">
   <ion-slides autoplay="3000" loop="true" class="home-slide">
-    <ion-slide class="slide-wraper">
-
-        <img src="assets/imgs/b1.jpg">
-
-      <div class="text">
-        <h1>40% discoint for first time order</h1>
-      </div>
+    <ion-slide>
+        <div class="slide-img">
+          <img src="assets/imgs/b1.jpg">
+        </div>
+        <div class="slide-text" style="background-color: #ba9d37; padding-top: 5px;">
+          <h3>GET 40% OFF ON FIRST ORDER</h3>
+          <h4>USECODE: WELCOME</h4>
+        </div>
     </ion-slide>
-    <ion-slide class="slide-wraper">
-
+    <ion-slide>
+      <div class="slide-img">
         <img src="assets/imgs/noodle.jpg">
-      <div class="text">
-        <h1>30% discount on ordering from our app</h1>
+      </div>
+      <div class="slide-text" style="background-color: #ba9d37; padding-top: 5px;">
+        <h3>GET 40% OFF ON ALL ORDER</h3>
+        <h4>USECODE: WELCOME</h4>
       </div>
     </ion-slide>
 
