--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -23,21 +23,30 @@
         <div class="slide-img">
           <img src="assets/imgs/b1.jpg">
         </div>
-        <div class="slide-text" style="background-color: #ba9d37; padding-top: 5px;">
-          <h3>GET 40% OFF ON FIRST ORDER</h3>
-          <h4>USECODE: WELCOME</h4>
+        <div class="slide-text" style="padding-top: 5px;">
+          40% OFF ON FIRST ORDER USE CODE
+          <h4 class="code">WELCOME</h4>
         </div>
     </ion-slide>
     <ion-slide>
       <div class="slide-img">
         <img src="assets/imgs/noodle.jpg">
       </div>
-      <div class="slide-text" style="background-color: #ba9d37; padding-top: 5px;">
-        <h3>GET 40% OFF ON ALL ORDER</h3>
-        <h4>USECODE: WELCOME</h4>
+      <div class="slide-text" style="padding-top: 5px;">
+        20% OFF ON ALL ORDER USE CODE
+        <h4 class="code">REGULAR</h4>
       </div>
     </ion-slide>
-
+    <ion-slide>
+      <div class="slide-wraper">
+        <div>
+          <img src="assets/imgs/about2.jpg">
+        </div>
+        <div class="text">
+          <img src="assets/imgs/ionic.png">
+        </div>
+      </div>
+    </ion-slide>
   </ion-slides>
 
   <ion-list>
