--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -31,10 +31,9 @@
 
     </div>
 
-    <button ion-button full item-left icon-right (click)="logout()">Logout</button>
+    <button [ngClass]="logedin" ion-button full item-left icon-right (click)="logout()">Logout</button>
   </div>
-  <div  [ngClass]="logedout" id="notlogedin">
-    <button ion-button full item-left icon-right (click)="login()">Login</button> <br /> Or <br />
-    <button ion-button full item-left icon-right (click)="register()">Register</button>
+  <div  [ngClass]="notlogin" id="notlogedin">
+    <button [ngClass]="notlogin" ion-button full item-left icon-right (click)="login()">Login</button>
   </div>
 </ion-content>
